--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==1.4.0
+antlr4-python3-runtime==4.9.3
 appdirs==1.4.4
 astunparse==1.6.3
 audioread==3.0.0
@@ -6,38 +7,64 @@ beautifulsoup4==4.12.2
 cachetools==5.3.1
 certifi==2023.5.7
 cffi==1.15.1
+chardet==5.1.0
 charset-normalizer==2.0.12
+cloudpickle==2.2.1
+cmake==3.26.4
 cycler==0.11.0
 decorator==5.1.1
+demucs @ git+https://github.com/facebookresearch/demucs@5d2ccf224f595b8654b0447e06f6adc866cca61a
+dora-search==0.1.12
+einops==0.6.1
 ffmpeg==1.4
 filelock==3.12.0
 flatbuffers==23.5.26
 fonttools==4.39.4
 gast==0.4.0
 gdown==4.2.1
-google-auth==2.19.0
+google-auth==2.19.1
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.54.2
 h5py==3.8.0
 idna==3.4
 importlib-metadata==6.6.0
-jax==0.4.10
+jax==0.4.12
+Jinja2==3.1.2
 joblib==1.2.0
+julius==0.2.7
 keras==2.12.0
 kiwisolver==1.4.4
+lameenc==1.4.2
 lazy_loader==0.2
 libclang==16.0.0
 librosa==0.10.0.post2
-llvmlite==0.40.0
+lit==16.0.5.post0
+llvmlite==0.40.1rc1
 Markdown==3.4.3
-MarkupSafe==2.1.2
+MarkupSafe==2.1.3
 matplotlib==3.5.1
-ml-dtypes==0.1.0
+ml-dtypes==0.2.0
+mpmath==1.3.0
 msgpack==1.0.5
+networkx==3.1
 numba==0.57.0
 numpy==1.23.5
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
 oauthlib==3.2.2
+omegaconf==2.3.0
+openmic @ file:///home/gabs/Documents/tcc/openmic-2018
+openunmix==1.2.1
 opt-einsum==3.3.0
 packaging==23.1
 pandas==1.4.0
@@ -51,9 +78,11 @@ pyparsing==3.0.9
 PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2023.3
+PyYAML==6.0
 requests==2.27.1
 requests-oauthlib==1.3.1
 resampy==0.4.2
+retrying==1.3.4
 rsa==4.9
 scikit-learn==1.0.2
 scipy==1.8.0
@@ -61,6 +90,8 @@ six==1.16.0
 soundfile==0.12.1
 soupsieve==2.4.1
 soxr==0.3.5
+submitit==1.4.5
+sympy==1.12
 tensorboard==2.12.3
 tensorboard-data-server==0.7.0
 tensorflow==2.12.0
@@ -69,10 +100,14 @@ tensorflow-io-gcs-filesystem==0.32.0
 termcolor==2.3.0
 tf-slim==1.1.0
 threadpoolctl==3.1.0
+torch==2.0.1
+torchaudio==2.0.2
 tqdm==4.62.3
-typing_extensions==4.6.2
+treetable==0.2.5
+triton==2.0.0
+typing_extensions==4.6.3
 urllib3==1.26.8
-Werkzeug==2.3.4
+Werkzeug==2.3.6
 wget==3.2
 wrapt==1.14.1
 zipp==3.15.0
